# urlcheck-smith

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: pypi.yml  release.yml
docs/: make.bat  requirements.txt
docs/source/: .readthedocs.yaml  changelog.rst  cli.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst  use_cases.rst
docs/source/api/: index.rst  urlcheck_smith.rst
src/urlcheck_smith/: __init__.py  check.py  classify.py  cli.py  extract.py  models.py  trust_manager.py
src/urlcheck_smith/core/: __init__.py  check.py  classify.py  crawl.py  extract.py  trust_manager.py  update_yaml.py  user_agent.py
src/urlcheck_smith/data/: rules_eu.yaml  rules_global.yaml  rules_japan.yaml  site_categories.yaml  ucsmith_db.yaml
src/urlcheck_smith/resources/: ucsmith_db.yaml
tests/: test_check.py  test_check_soft_404.py  test_classify.py  test_cli_classify_url.py  test_cli_crawl.py  test_cli_db.py  test_cli_jsonl.py  test_crawl.py  test_extract.py  test_extract_https_urls_and_csv.py  test_integrity.py  test_new_classification.py  test_public_api.py  test_trust_manager.py  test_update_yaml.py  test_user_agent.py
