[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlcheck-smith"
version = "0.2.1"
description = "Minimal URL extraction / classification / HTTP check pipeline."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Eiichi Yamamoto" }
]
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[project.scripts]
urlcheck-smith = "urlcheck_smith.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"urlcheck_smith" = ["data/*.yaml"]
