[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlcheck-smith"
version = "0.3.1"
description = "Minimal URL extraction / classification / HTTP check pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Eiichi Yamamoto" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.0",
  "urlextract>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/yeiichi/urlcheck-smith"
Repository = "https://github.com/yeiichi/urlcheck-smith"
Documentation = "https://urlcheck-smith.readthedocs.io/"
Changelog = "https://urlcheck-smith.readthedocs.io/en/latest/changelog.html"

[project.scripts]
urlcheck-smith = "urlcheck_smith.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"urlcheck_smith" = ["data/*.yaml"]
