# c.f. https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urlcheck-smith"
version = "0.7.0"
dependencies = [
  "requests>=2.33.1",
  "PyYAML>=6.0.0",
  "urlextract>=1.9.0",
]
requires-python = ">=3.12"
authors = [{ name = "Eiichi Yamamoto" }]
description = "Minimal URL extraction / classification / HTTP check pipeline."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["url", "check", "classification", "pipeline", "trust-tier", "soft-404"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yeiichi/urlcheck-smith"
Repository = "https://github.com/yeiichi/urlcheck-smith"
Documentation = "https://urlcheck-smith.readthedocs.io/"
Changelog = "https://urlcheck-smith.readthedocs.io/en/latest/changelog.html"

[project.scripts]
urlcheck-smith = "urlcheck_smith.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/urlcheck_smith"]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.3",
    "sphinx>=9.1.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"